--- a/gotgame/Base.lproj/Main.storyboard
+++ b/gotgame/Base.lproj/Main.storyboard
@@ -64,6 +64,7 @@
                                 </state>
                                 <connections>
                                     <action selector="logOut:" destination="9kS-GJ-Nbh" eventType="touchUpInside" id="6US-AE-U7G"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="GYB-Wh-cxA"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LpC-XD-zck">
